[tool.poetry]
name = "tdd"
version = "0.1.0"
description = ""
authors = ["Juan"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"

[tool.poetry.dev-dependencies]
selenium = "^4.3.0"
black = {version = "^22.6", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
